deploy/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: colorblinder-backend
  ports:
    - protocol: TCP
      name: main
      port: 80
      targetPort: 8080
    - name: metrics
      port: 2112
      targetPort: 2112
  type: NodePort
status:
  loadBalancer: {}
