deploy/kubernetes/kubernetes-internal-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubernetes-internal
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kubernetes-internal: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kubernetes-internal: "true"
